--- a/README.ipynb
+++ b/README.ipynb
@@ -46,6 +46,15 @@
     "run algo\n",
     "find mismaqtch with bruteforce\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "0 padding with induced if else\n"
+   ]
   }
  ],
  "metadata": {
