--- a/README.ipynb
+++ b/README.ipynb
@@ -5,11 +5,213 @@
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "plaintext"
+     "languageId": "cpp"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "PointPair RClosestPairPoint(std::vector<Point> & P) {\n",
+    "    double min = P[0] & P[1];\n",
+    "    PointPair res={P[0], P[1]};\n",
+    "    for (int i = 0; i < P.size(); i++) \n",
+    "        for (int j = i+1; j < P.size(); j++) \n",
+    "            if ((P[i] & P[j]) < min && i!=j) {\n",
+    "                min = P[i] & P[j]; // & is the distance between two points\n",
+    "                res = {P[i], P[j]};\n",
+    "            }\n",
+    "    return res;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Closest Pair of Points - Divide and Conquer approaches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "cpp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "PointPair dccpp(std::vector<Point>&points,int l, int r);\n",
+    "PointPair dccppP(std::vector<Point>&points,int l, int r);\n",
+    "PointPair dccpp_ysorted(std::vector<Point>& points,std::vector<Point>& pointY, int l, int r);\n",
+    "\n",
+    "PointPair DCClosestPairPoints(std::vector<Point> & P) {\n",
+    "    std::sort(P.begin(), P.end());\n",
+    "    return dccpp(P, 0, P.size()-1); \n",
+    "}\n",
+    "PointPair DCClosestPairPointsFP(std::vector<Point> & P) {\n",
+    "    std::sort(P.begin(), P.end());\n",
+    "    return dccppP(P, 0, P.size()-1); \n",
+    "}\n",
+    "PointPair DCClosestPairPointsY(std::vector<Point> & P) {\n",
+    "    std::sort(P.begin(), P.end());\n",
+    "    std::vector<Point> pointY = P;\n",
+    "    std::sort(pointY.begin(), pointY.end(), Point());\n",
+    "    return dccpp_ysorted(P, pointY, 0, P.size()-1);\n",
+    "}\n",
+    "PointPair DCClosestPairPointsP(std::vector<Point> & points) {\n",
+    "    std::sort(points.begin(), points.end());\n",
+    "    int n = points.size();\n",
+    "    int num_threads = std::thread::hardware_concurrency();\n",
+    "    int chunk_size = n / num_threads;\n",
+    "\n",
+    "    std::vector<std::future<PointPair>> futures;\n",
+    "    for (int i = 0; i < num_threads; ++i) {\n",
+    "        int start = i * chunk_size;\n",
+    "        int end = (i == num_threads - 1) ? n - 1 : (i + 1) * chunk_size - 1;\n",
+    "        futures.push_back(std::async(std::launch::async, dccpp, std::ref(points), start, end));\n",
+    "    }\n",
+    "\n",
+    "    PointPair smallest = futures[0].get();\n",
+    "    for (int i = 1; i < num_threads; ++i) {\n",
+    "        PointPair result = futures[i].get();\n",
+    "        if (result < smallest) smallest = result;\n",
+    "    }\n",
+    "\n",
+    "    double d = smallest;\n",
+    "    std::vector<Point> strip;\n",
+    "    for (int i=0;i<num_threads-1;i++) {\n",
+    "        int l = i * chunk_size;\n",
+    "        int r = (i == num_threads - 2) ? n - 1 : (i + 2) * chunk_size - 1;\n",
+    "        int m = (l + r) / 2;\n",
+    "        auto start = points.begin() + l;\n",
+    "    auto end   = points.begin() + r + 1;\n",
+    "    auto lower = std::lower_bound(start, end, Point(points[m].x - d, 0));\n",
+    "    start = lower;\n",
+    "    auto upper = std::upper_bound(start, end, Point(points[m].x + d, 0));\n",
+    "    std::vector<Point> strip(lower, upper);\n",
+    "    std::sort(strip.begin(), strip.end(), Point());\n",
+    "    for (int i = 0; i < (int)strip.size(); i++) \n",
+    "        for (int j=i+1;j<8 && j<(int)strip.size();j++) \n",
+    "            if ((strip[i] & strip[j]) < d) d = smallest = {strip[i], strip[j]};\n",
+    "    }\n",
+    "    \n",
+    "\n",
+    "    return smallest;\n",
+    "}\n",
+    "PointPair dccpp(std::vector<Point>&points,int l, int r) {\n",
+    "    if (r-l == 1)   return {points[l], points[r]}; // O(1)\n",
+    "\n",
+    "    if (r-l == 2) { // O(1)\n",
+    "    \n",
+    "        double d1 = points[l+1]  & points[l];\n",
+    "        double d2 = points[l]      & points[r];\n",
+    "        double d3 = points[l+1] & points[r];\n",
+    "\n",
+    "        if          (d1 < d2 && d1 < d3)   return {points[l], points[l+1]};\n",
+    "        else if (d2 < d3)                        return {points[l]  ,   points[r]};\n",
+    "        else                                            return {points[l+1], points[r]};\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "    int m = (l+r)/2;\n",
+    "\n",
+    "    PointPair smallest = std::min(dccpp(points, l, m),dccpp(points, m+1, r));\n",
+    "    double d = smallest;\n",
+    "\n",
+    "    // Divide and search\n",
+    "    auto start = points.begin() + l;\n",
+    "    auto end   = points.begin() + r;\n",
+    "    auto lower = std::lower_bound(start, end, Point(points[m].x - d, 0)); // O(log n)\n",
+    "    start = lower;\n",
+    "    auto upper = std::upper_bound(start, end, Point(points[m].x + d, 0)); // O(log n)\n",
+    "    if (upper == points.end()) upper = end;\n",
+    "    std::vector<Point> strip(lower, upper);\n",
+    "    // Sort the strip by y coordinate.\n",
+    "    std::sort(strip.begin(), strip.end(), Point()); // O(n log n) - n is the size of the strip: which can be at most (l-r)/2\n",
+    "\n",
+    "    // Search the strip\n",
+    "    /*\n",
+    "     * The smallest distance is d\n",
+    "    *  In the X axis, the distance between two points is d, i.e. from the middle point there can be shorterdistances in a d radius circle\n",
+    "    * However moving from up to down we do not need to consider all points, only the ones that are below is enough -  as the points are sorted by y coordinate.\n",
+    "    * For simplicity, We search a rectangle instead of a circle. Now the dimention of the rectangle is 2d x d.\n",
+    "    * There\n",
+    "    */\n",
+    "    for (int i = 0; i < (int)strip.size(); i++) // O(n)\n",
+    "        for (int j=i+1;j<i+8&& j<(int)strip.size();j++)  // O(1)\n",
+    "            if ((strip[i] & strip[j]) < d) d = smallest = {strip[i], strip[j]};\n",
+    "    \n",
+    "    return smallest;\n",
+    "}\n",
+    "PointPair dccppP(std::vector<Point>&points,int l, int r) {\n",
+    "    if (r-l == 1)   return {points[l], points[r]}; // O(1)\n",
+    "\n",
+    "    if (r-l == 2) { // O(1)\n",
+    "        \n",
+    "        double d1 = points[l] & points[l+1];\n",
+    "        double d2 = points[l] & points[r];\n",
+    "        double d3 = points[l+1] & points[r];\n",
+    "\n",
+    "        if          (d1 < d2 && d1 < d3)   return {points[l], points[l+1]};\n",
+    "        else if (d2 < d3)                        return {points[l]  ,   points[r]};\n",
+    "        else                                            return {points[l+1], points[r]};\n",
+    "\n",
+    "    }\n",
+    "    int m = (l+r)/2;\n",
+    "\n",
+    "    PointPair smallest = std::min(dccppP(points, l, m),dccppP(points, m+1, r));\n",
+    "    double d = smallest;\n",
+    "\n",
+    "    // Divide and search\n",
+    "    auto start = points.begin() + l;\n",
+    "    auto end   = points.begin() + r + 1;\n",
+    "    auto lower = std::lower_bound(start, end, Point(points[m].x - d, 0)); // O(log n)\n",
+    "    start = lower;\n",
+    "    auto upper = std::upper_bound(start, end, Point(points[m].x + d, 0)); // O(log n)\n",
+    "    if (upper == points.end()) upper = end;\n",
+    "    std::vector<Point> strip(lower, upper);\n",
+    "    // Sort the strip by y coordinate.\n",
+    "    std::sort(strip.begin(), strip.end(), Point()); // O(n log n) - n is the size of the strip: which can be at most (l-r)/2\n",
+    "\n",
+    "    // Search the strip\n",
+    "    /*\n",
+    "     * The smallest distance is d\n",
+    "    *  In the X axis, the distance between two points is d, i.e. from the middle point there can be shorterdistances in a d radius circle\n",
+    "    * However moving from up to down we do not need to consider all points, only the ones that are below is enough -  as the points are sorted by y coordinate.\n",
+    "    * For simplicity, We search a rectangle instead of a circle. Now the dimention of the rectangle is 2d x d.\n",
+    "    * There\n",
+    "    */\n",
+    "    for (int i = 0; i < (int)strip.size(); i++) // O(n)\n",
+    "        for (int j=i+1;j<i+8 && j<(int)strip.size();j++)  // O(1)\n",
+    "            if ((strip[i] & strip[j]) < d) d = smallest = {strip[i], strip[j]};\n",
+    "    \n",
+    "    return smallest;\n",
+    "}\n",
+    "PointPair dccpp_ysorted(std::vector<Point>& points,std::vector<Point>& pointY, int l, int r) {\n",
+    "    if (r - l == 1) return {points[l], points[r]};\n",
+    "    if (r - l == 2) {\n",
+    "        double d1 = points[l] & points[l + 1];\n",
+    "        double d2 = points[l] & points[r];\n",
+    "        double d3 = points[l + 1] & points[r];\n",
+    "        if (d1 < d2 && d1 < d3) return {points[l], points[l + 1]};\n",
+    "        else if (d2 < d3) return {points[l], points[r]};\n",
+    "        else return {points[l + 1], points[r]};\n",
+    "    }\n",
+    "    int m = (l + r) / 2;\n",
+    "    PointPair smallest = std::min(dccpp(points, l, m), dccpp(points, m + 1, r));\n",
+    "    double d = smallest;\n",
+    "    std::vector<Point> strip;\n",
+    "    for (int i=0;i<pointY.size();i++) {\n",
+    "        if (pointY[i].x >= points[m].x - d && pointY[i].x <= points[m].x + d)\n",
+    "            strip.push_back(pointY[i]);\n",
+    "    }\n",
+    "    for (int i = 0; i < (int)strip.size(); i++) \n",
+    "        for (int j = i + 1; j < 8 && j < (int)strip.size(); j++) \n",
+    "            if ((strip[i] & strip[j]) < d) d = smallest = {strip[i], strip[j]};\n",
+    "    return smallest;\n",
+    "}\n",
+    " "
+   ]
   },
   {
    "cell_type": "code",
