--- a/Divide and Conquer Algorithm Benchmarking.ipynb
+++ b/Divide and Conquer Algorithm Benchmarking.ipynb
@@ -1689,7 +1689,7 @@
  "metadata": {
   "author": "Tasmir Hossain Zihad (2107071)",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
